# opengl_template_project

./: .gitignore  CMakeLists.txt  README.md  make.sh
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glm/: CMakeLists.txt
inc/: window.h
src/: main.cpp  window.cpp
